--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,26 +3,81 @@
 
 name: .NET
 
+# Define the events that trigger the Github Actions workflow
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master # Only trigger the workflow on the master branch
+    paths-ignore:
+      - '**/*.md' # Ignore markdown files
+      - '**/*.git*' # Ignore git files
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master # Only trigger the workflow on the master branch
+  workflow_dispatch:
+
+# Define the environment variables to be used in the Github Actions workflow
+env:
+  DOTNET_NOLOGO: true
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
 
 jobs:
-  build:
 
-    runs-on: ubuntu-latest
+
+     # Setup job to install .NET and MAUI workload
+  setup:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest]
+        dotnet-version: [7.0.x]
 
     steps:
+
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+        dotnet-version: 7.0.x
+
+    # Cache NuGet packages and the .NET SDK for faster builds
+    - name: Cache .NET packages
+      uses: actions/cache@v3.2.6
+      with:
+        path: '~/.nuget/packages'
+        key: ${{ runner.os }}-dotnet-${{ matrix.dotnet-version }}-packages-${{ hashFiles('**/*.csproj') }}
+        restore-keys: |
+          ${{ runner.os }}-dotnet-${{ matrix.dotnet-version }}-packages-
+          ${{ runner.os }}-dotnet-${{ matrix.dotnet-version }}-
+          ${{ runner.os }}-dotnet-
+
+    # Build job to build the MAUI app for Android & IOS
+   # Build job to build the MAUI app for Android & IOS
+  build-maui-android:
+    # Define the jobs that this job depends on
+    needs: [setup]
+    name: Build MAUI for Android
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest]
+        
+        steps:
+        - uses: actions/checkout@v3
+        
+        # Cache NuGet packages and the .NET SDK for faster builds
+        - name: Cache .NET packages
+          uses: actions/cache@v3.2.6
+          with:
+            path: '~/.nuget/packages'
+            key: ${{ runner.os }}-dotnet-${{ matrix.dotnet-version }}-packages-${{ hashFiles('**/*.csproj') }}
+            restore-keys: |
+              ${{ runner.os }}-dotnet-${{ matrix.dotnet-version }}-packages-
+              ${{ runner.os }}-dotnet-${{ matrix.dotnet-version }}-
+              ${{ runner.os }}-dotnet-
+        
+        - uses: actions/setup-dotnet@v3
+          with:
+            dotnet-version: ${{ matrix.dotnet-version }}
+        - run: dotnet build --no-restore
