--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,5 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: .NET
 
@@ -52,18 +50,15 @@ jobs:
           ${{ runner.os }}-dotnet-${{ matrix.dotnet-version }}-
           ${{ runner.os }}-dotnet-
 
-    # Build job to build the MAUI app for Android & IOS
-   # Build job to build the MAUI app for Android & IOS
-  build-maui-android:
+  build-web-app:
     # Define the jobs that this job depends on
     needs: [setup]
-    name: Build MAUI for Android
+    name: Build Web App
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [windows-latest]
-        
-        steps:
+    steps:
         - uses: actions/checkout@v3
         
         # Cache NuGet packages and the .NET SDK for faster builds
