--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -75,4 +75,7 @@ jobs:
         - uses: actions/setup-dotnet@v3
           with:
             dotnet-version: ${{ matrix.dotnet-version }}
+        - name: Restore
+          run: dotnet restore
+        - name: Build
         - run: dotnet build
