--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -78,4 +78,4 @@ jobs:
         - name: Restore
           run: dotnet restore
         - name: Build
-        - run: dotnet build
+        - run: dotnet build --no restore
