--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -75,7 +75,9 @@ jobs:
         - uses: actions/setup-dotnet@v3
           with:
             dotnet-version: ${{ matrix.dotnet-version }}
-        - name: Restore
-          run: dotnet restore
-        - name: Build
+          name: Restore
+        - run: dotnet restore
+          name: Build
         - run: dotnet build --no restore
+
+
