--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -78,6 +78,6 @@ jobs:
           name: Restore
         - run: dotnet restore
           name: Build
-        - run: dotnet build --no restore
+        - run: dotnet build --no-restore
 
 
